Changes issue watch button icon to eye image to align icon with function and improve visual clarity (#42305).
Patch by Katsuya HIDAKA (user:hidakatsuya).


git-svn-id: https://svn.redmine.org/redmine/trunk@23557 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1779,11 +1779,6 @@ svg.icon-ok {
   display: none;
 }
 
-.icon-fav svg.icon-svg {
-  fill: #ffc400;
-  stroke: #ffc400;
-}
-
 svg.icon-svg {
   stroke: #169;
   fill: none;
